@@ -604,6 +604,21 @@ typedef struct vki_kcf_door_arg_s {
 #define vki_semid64_ds semid_ds64
 
 
+#include <sys/lgrp_user_impl.h>
+#define VKI_LGRP_SYS_MEMINFO LGRP_SYS_MEMINFO
+#define VKI_LGRP_SYS_GENERATION LGRP_SYS_GENERATION
+#define VKI_LGRP_SYS_VERSION LGRP_SYS_VERSION
+#define VKI_LGRP_SYS_SNAPSHOT LGRP_SYS_SNAPSHOT
+#define VKI_LGRP_SYS_AFFINITY_GET LGRP_SYS_AFFINITY_GET
+#define VKI_LGRP_SYS_AFFINITY_SET LGRP_SYS_AFFINITY_SET
+#define VKI_LGRP_SYS_LATENCY LGRP_SYS_LATENCY
+#define VKI_LGRP_SYS_HOME LGRP_SYS_HOME
+#define VKI_LGRP_SYS_AFF_INHERIT_GET LGRP_SYS_AFF_INHERIT_GET
+#define VKI_LGRP_SYS_AFF_INHERIT_SET LGRP_SYS_AFF_INHERIT_SET
+#define VKI_LGRP_SYS_DEVICE_LGRPS LGRP_SYS_DEVICE_LGRPS
+#define VKI_LGRP_SYS_MAXSOCKETS_GET LGRP_SYS_MAXSOCKETS_GET
+
+
 #include <sys/loadavg.h>
 #define VKI_LOADAVG_NSTATS LOADAVG_NSTATS
 
@@ -642,6 +657,8 @@ typedef struct vki_kcf_door_arg_s {
 #define VKI_MC_LOCKAS MC_LOCKAS
 #define VKI_MC_UNLOCKAS MC_UNLOCKAS
 #define VKI_MC_HAT_ADVISE MC_HAT_ADVISE
+
+#define vki_meminfo_t meminfo_t
 
 
 #include <sys/mntio.h>
